[gd_scene load_steps=4 format=3 uid="uid://cx0ntdd57ldtw"]

[ext_resource type="PackedScene" uid="uid://sld3axofkf1o" path="res://Scenes/Characters/npc_base.tscn" id="1_85xkt"]
[ext_resource type="Script" uid="uid://d50jaeq67x7b" path="res://Scenes/Characters/enemy_base.gd" id="2_pq4fn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qfbwa"]
size = Vector2(76, 74)

[node name="Enemy_Base" instance=ExtResource("1_85xkt")]
script = ExtResource("2_pq4fn")
health_points = 0
knockback_velocity = Vector2(0, 0)
knockback_direction = Vector2(0, 0)
knockback_strength = 0.0
knockback_distance = 0.0
can_wander = true
wandering_range = 25.0
speed = 4

[node name="Knockback_Cooldown_Timer" type="Timer" parent="." index="3"]

[node name="Wander_Cooldown_Timer" type="Timer" parent="." index="4"]
wait_time = 3.0
autostart = true

[node name="Detect_Player" type="Area2D" parent="." index="5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_Player" index="0"]
shape = SubResource("RectangleShape2D_qfbwa")

[connection signal="timeout" from="Knockback_Cooldown_Timer" to="." method="_on_knockback_cooldown_timer_timeout"]
[connection signal="timeout" from="Wander_Cooldown_Timer" to="." method="_on_wander_cooldown_timer_timeout"]
[connection signal="body_entered" from="Detect_Player" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="Detect_Player" to="." method="_on_detect_player_body_exited"]
